kubernetes/flask/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-api-service
  labels:
    service: app-api
spec:
  selector:
    app: app-api
  type: NodePort
  ports:
    - port: 5001
      targetPort: 5001
      nodePort: 30001
