kubernetes/flask/backend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-be-to-db
spec:
  podSelector:
     matchLabels:
      app: postgres
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app-api
    ports:
    - protocol: TCP
      port: 5432
